# video_player_win

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
lib/: video_player_win.dart  video_player_win_method_channel.dart  video_player_win_platform_interface.dart  video_player_win_plugin.dart
test/: video_player_win_method_channel_test.dart  video_player_win_test.dart
windows/: CMakeLists.txt  my_grabber_player.cpp  my_grabber_player.h  my_http_bytestream.cpp  my_http_bytestream.h  video_player_win_plugin.cpp  video_player_win_plugin.h  video_player_win_plugin_c_api.cpp
windows/DX11VideoRenderer/: Activate.cpp  Activate.h  Common.h  DLLMain.cpp  DX11VideoRenderer.h  MFAttributesImpl.h  MediaSink.cpp  MediaSink.h  Presenter.cpp  Presenter.h  README  Scheduler.cpp  StreamSink.cpp  linklist.h
windows/include/video_player_win/: video_player_win_plugin_c_api.h
